# GS-Impute

./: .gitattributes  Appendix A.doc  README.md
GSImpute v1.0_Linux/: install.py  setup.py
GSImpute v1.0_Linux/pycut/: getFolder.py  getPkl.py  imputeTask.py  model.py  pyTest.py  reconstructTask.py
GSImpute v1.0_Windows/: IMPTest.ui  Installation Instructions.txt  Ui_IMPTest.py  install.py  setup.cfg  setup.py
GSImpute v1.0_Windows/UI/: IMP.cp38-win_amd64.pyd  IMP.py  RES.cp38-win_amd64.pyd  RES.py  Ui_IMP2.cp38-win_amd64.pyd  Ui_IMP2.py  Ui_RES2.cp38-win_amd64.pyd  Ui_RES2.py  start.py
GSImpute v1.0_Windows/pycut/: func.cp38-win_amd64.pyd  func.py  getFolder.cp38-win_amd64.pyd  getFolder.py  getPkl.cp38-win_amd64.pyd  getPkl.py  getPos.cp38-win_amd64.pyd  getPos.py  getVcf.cp38-win_amd64.pyd  getVcf.py  impute.cp38-win_amd64.pyd  impute.py  imputeTask.cp38-win_amd64.pyd  imputeTask.py  input.cp38-win_amd64.pyd  input.py  model.cp38-win_amd64.pyd  model.py  pyTest.cp38-win_amd64.pyd  pyTest.py  reconstructTask.cp38-win_amd64.pyd  reconstructTask.py
GSImpute1.0_Linux/: install.py  setup.py
GSImpute1.0_Linux/pycut/: func.py  getPkl.py  getPos.py  getVcf.py  impute.py  imputeTask.py  input.py  model.py  pyTest.py  reconstructTask.py
GSImpute1.0_Windows/: MANIFEST.in  RESTest.ui  Ui_IMPTest.py  Ui_RESTest.py  install.py  setup.py
GSImpute1.0_Windows/UI/: IMP.py  RES.py  Ui_IMP2.py  Ui_RES2.py  __init__.py  start.py
GSImpute1.0_Windows/pycut/: func.py  getPkl.py  getPos.py  getVcf.py  impute.py  imputeTask.py  input.py  model.py  (+1 more)
images/: Fig 2.tif  Fig 4.tif
