[metadata]
name = GS-Impute
version = 1.0
description = 
author = Xin Wang
author_email = 
maintainer = Chenwu Xu
maintainer_email = 
license = MIT License
url = 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =

[options.packages.find]
exclude =
    tests*
    docs*
    examples*

[options.entry_points]
console_scripts =
    gsi = pycut.pyTest:main